simplify error return from director
